🧑🏻‍💻🚧 Tips